kube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: court-list-service
  labels:
    app: court-list-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: court-list-service-app
  template:
    metadata:
      labels:
        app: court-list-service-app
    spec:
      containers:
        - name: court-list-service
          image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/probation-services/court-list-service:1.1
          resources:
            limits:
              memory: "512Mi"
              cpu: "1000m"
            requests:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
