kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: court-case-service
spec:
  selector:
    app: court-case-service-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
